--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ textarea,
   padding: 10px;
   width: 100%;
   height: 100%;
-  background: #f6f7f9;
+  background: #fff;
 }
 .feed-content .recentcontainer .newpost .postcontent {
   position: relative;
