--- a/css/style.css
+++ b/css/style.css
@@ -636,7 +636,7 @@ textarea,
   padding: 8px 12px;
 } 
 @media (max-width: 424px){
-  .notification-group > .last{
+  .notification-group .link-group:nth-child(4){
     display: none;
   }
 }
