--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,36 @@ textarea,
   left: 0;
   right: 0;
   z-index: 1;
-  padding: 6px 26px;
-  height: 42px;
+  padding: 20px 26px;
+  height: 75px;
   background: #3b5e95;
   border-bottom: 1px solid #294c7b;
   overflow: hidden;
 }
+/*logo box*/
+.logo-box{
+  width: 155px;
+  float: left;
+}
+.logo-span{
+  background-image: url(https://www.facebook.com/rsrc.php/v3/ys/r/y7nRb1Fhh8Z.png);
+  background-position: 0 0;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 30px;
+  display: block;
+}
+
 .topbar .right-group {
   float: right;
+}
+.topbar .right-group::after{
+  content: "Forgot Account?";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 12px;
+  color: #8BA4D0;
 }
 .topbar .right-group .link-group {
   position: relative;
@@ -92,7 +114,7 @@ textarea,
 }
 .left-content {
   position: fixed;
-  top: 42px;
+  top: 75px;
   bottom: 0;
   width: 250px;
   background: #e9ebee;
@@ -139,7 +161,7 @@ textarea,
 }
 .feed-content {
   position: absolute;
-  top: 42px;
+  top: 75px;
   bottom: 0;
   left: 250px;
   right: 0;
@@ -301,7 +323,7 @@ textarea,
 }
 .thirdcol-content {
   position: fixed;
-  top: 42px;
+  top: 75px;
   bottom: 0;
   width: 250px;
   background: #e9ebee;
@@ -599,23 +621,23 @@ textarea,
   }
 }
 @media all and (min-width: 1260px) {
-  .feed-content {
+/*  .feed-content {
     right: 250px;
-  }
+  }*/
   .right-content {
     right: 0;
   }
 }
 @media all and (min-width: 1260px) {
-  .feed-content {
+/*  .feed-content {
     right: 575px;
   }
   .thirdcol-content {
     right: 275px;
-  }
-  .right-content {
+  }*/
+/*  .right-content {
     display: block;
-  }
+  }*/
 }
 .pointer {
   cursor: pointer;
