--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ textarea,
 }
 .cover-section .cover-img{
   width: 100%;
-  background: url("https://scontent.ficn2-1.fna.fbcdn.net/v/t31.0-8/29060144_10151532524504999…8669235130_o.jpg?_nc_cat=0&oh=4130f7a…&oe=5BAE81E5");
+  background: url("https://scontent.ficn2-1.fna.fbcdn.net/v/t31.0-8/29060144_10151532524504999_4458768048669235130_o.jpg?_nc_cat=0&oh=4130f7aa082732261574930e99125184&oe=5BAE81E5");
   height: 300px;
   background-size: cover;
 }
