--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ textarea,
   left: 0;
   right: 0;
   z-index: 1;
-  padding: 20px 26px;
+  padding: 20px 100px;
   height: 75px;
   background: #3b5e95;
   border-bottom: 1px solid #294c7b;
@@ -27,6 +27,7 @@ textarea,
 .logo-box{
   width: 155px;
   float: left;
+  margin-left: 5px;
 }
 .logo-span{
   background-image: url(https://www.facebook.com/rsrc.php/v3/ys/r/y7nRb1Fhh8Z.png);
@@ -51,13 +52,12 @@ textarea,
 }
 .topbar .right-group .link-group {
   position: relative;
-  top: -4px;
   display: inline-block;
-  padding: 0;
   margin-right: 15px;
+  font-size: 12px;
 }
 .topbar .right-group .link-group .login-form{
-  padding: 3px;
+  padding: 1px;
   border: 1px solid #000;
 }
 .topbar .right-group .link-group .login-button{
@@ -65,7 +65,7 @@ textarea,
     border: 1px solid;
     color: #fff;
     border-color: #29487d;
-    padding: 4px 9px 8px;
+    padding: 1px 9px 4px;
 }
 .topbar .right-group .link-group a {
   padding: 9px 8px;
@@ -130,9 +130,10 @@ textarea,
   left: 0;
 }
 .left-content {
-  float: left;
   width: 250px;
   background: #e9ebee;
+  position: fixed;
+  left: 80px;
 }
 .left-content .global-links {
   padding: 10px;
@@ -146,10 +147,10 @@ textarea,
   padding: 2px 8px;
 }
 .left-content .global-links a img {
-  width: 20px;
+/*  width: 20px;
   height: 20px;
   margin-right: 6px;
-  border-radius: 50%;
+  border-radius: 50%;*/
 }
 .left-content .global-links .counter {
   float: right;
@@ -176,6 +177,7 @@ textarea,
 .cover-section{
   padding: 12px 7px;
   overflow: auto;
+  margin-left: 250px;
 }
 .cover-section .cover-img{
   width: 100%;
@@ -689,4 +691,5 @@ textarea,
 .css-grid{
   display: grid;
   grid-template-columns: auto 300px;
+  margin-left: 250px;
 }
