--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,56 @@ textarea,
   height: 300px;
   background-size: cover;
 }
+.cover-section .cover-infos{
+  border: 1px solid #f6f7f9;
+  background: #fff;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  padding: 10px;
+  border-top: 0;
+}
+.cover-infos .left-info{
+  float: left;
+}
+.cover-infos .right-info{
+  float: right;
+}
+.cover-infos .coverInfo{
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  background: #f6f7f9;
+  padding: 4px;
+  font-size: 12px;
+}
+.cover-infos .coverInfo .imoji{
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  position: relative;
+  top: 4px;
+  margin-right: 3px;
+}
+.cover-infos .coverInfo .good .imoji{
+  background-image: url("https://facebook.com/rsrc.php/v3/ys/r/qFb-rJsb-c5.png");
+  background-size: 65px 348px;
+  background-position: -34px -263px;
+}
+.cover-infos .coverInfo .share .imoji{
+  background-image: url("https://facebook.com/rsrc.php/v3/yS/r/XFJdEd8FKHe.png");
+  background-size: 97px 1364px;
+  background-position: -66px -1096px;
+}
+.cover-infos .coverInfo .edit .imoji{
+  background-image: url("https://facebook.com/rsrc.php/v3/yH/r/z_2VdnMmNwW.png");
+  background-size: 421px 2212px;
+  background-position: -153px -2165px;
+}
+.cover-infos .coverInfo .dotdot .imoji{
+  background-image: url("https://facebook.com/rsrc.php/v3/yS/r/XFJdEd8FKHe.png");
+  background-size: 97px 1364px;
+  background-position: -49px -960px;
+}
 .feed-content {
   padding: 12px 7px;
   background: #e9ebee;
