--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ textarea,
 .cover-infos .coverInfo .send-message .imoji{
   background-image: url("https://facebook.com/rsrc.php/v3/y9/r/kd_ynB4DmPb.png");
   background-size: 161px 314px;
-  background-position: -153px -2165px;
+background-position: -40px -259px;
 }
 .cover-infos .coverInfo .join{
   padding: 2px 60px;
@@ -304,6 +304,7 @@ textarea,
   border: 0;
   color: #fff;
   margin-right: 5px;
+  font-size: 15.4px;
 }
 .feed-content {
   padding: 12px 7px;
