--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ textarea,
   font-size: 12px;
   margin-left: -5px;
   display: inline-block;
+  cursor: pointer;
 }
 .cover-infos .coverInfo .imoji{
   background-repeat: no-repeat;
@@ -460,9 +461,9 @@ background-position: -40px -259px;
 .feed-content .recentcontainer:nth-child(1) .newpostfooter li:nth-child(2) .fa {
   color: #f1c04e;
 }
-.feed-content .recentcontainer:nth-child(1) .newpostfooter li:last-child a:last-child {
+/*.feed-content .recentcontainer:nth-child(1) .newpostfooter li:last-child a:last-child {
   font-size: 20px;
-}
+}*/
 .thirdcol-content {
   width: 100%;
   padding: 12px 7px;
@@ -813,4 +814,13 @@ background-position: -40px -259px;
   display: grid;
   grid-template-columns: auto 300px;
   margin-left: 220px;
+}
+
+.news-link-box{
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .15) inset, 0 1px 4px rgba(0, 0, 0, .1);
+}
+.news-link-box .photo-section{
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  background-size: cover;
 }
