--- a/css/style.css
+++ b/css/style.css
@@ -846,6 +846,11 @@ background-position: -40px -259px;
   grid-template-rows: 200px 200px;
   grid-gap: 3px;
 }
+.photo-post-box .photo{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .vertical{
   grid-row: span 2;
 }
