--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,7 @@ background-position: -40px -259px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .15) inset, 0 1px 4px rgba(0, 0, 0, .1);
 }
 .news-link-box .photo1{
-  background-image: url("https://external.ficn2-1.fna.fbcdn.net/safe_image.php?d=AQCczUnCdG38moDV&w=…d_placeholder_publisher&sx=0&sy=0&sw=1050&sh=549&_nc_hash=AQCc5A3jivJcJpYw");
+  background-image: url("https://static01.nyt.com/images/2018/07/04/business/04SCOTUSAD-3/merlin_140381448_f7ea8ec5-c0c7-42fc-a08b-b361b455fcb0-superJumbo.jpg?quality=90&auto=webp");
 }
 .news-link-box .photo-section{
   border-top-left-radius: 2px;
