--- a/css/style.css
+++ b/css/style.css
@@ -846,14 +846,14 @@ background-position: -40px -259px;
   grid-template-rows: 200px 200px;
   grid-gap: 3px;
 }
-.photo-post-box .photo{
+.photo-post-box .photo > img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 .vertical{
-  grid-row: span 2;
+  grid-column: span 2;
 }
 .horizontal{
-  grid-column: span 2;
+  grid-row: span 2;
 }
