right section making

--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,18 @@ background-position: -40px -259px;
   margin: 0 0 15px 0;
   overflow-y: hidden;
   padding: 4px 5px;
-  background: #f6f7f9;
+  background: #fff;
+}
+.thirdcol-content .section-content .pac{
+  padding: 2px 10px;
+  font-size: 13px;
+}
+.thirdcol-content .section-content .pac .letter input{
+  border: 0;
+}
+.thirdcol-content .section-content .pac .pics{
+  float: left;
+  margin-right: 4px;
 }
 .thirdcol-content .section-content h4:nth-child(1) {
   font-size: 14px;
