--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,10 @@ background-position: -40px -259px;
 }
 .thirdcol-content .section-content .pac{
   padding: 2px 10px;
-  font-size: 13px;
+  font-size: 12px;
+  display: grid;
+  grid-template-columns: 16px auto;
+  grid-gap: 5px;
 }
 .thirdcol-content .section-content .pac .letter input{
   border: 0;
