use 1fr not auto

--- a/css/style.css
+++ b/css/style.css
@@ -826,8 +826,8 @@ background-position: -40px -259px;
 .css-grid{
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto 300px;
-  grid-template-columns: auto 300px;
+  -ms-grid-columns: 1fr 300px;
+  grid-template-columns: 1fr 300px;
   margin-left: 220px;
 }
 
@@ -858,8 +858,9 @@ background-position: -40px -259px;
 }
 .photo-post-box{
   display: -ms-grid;
-  -ms-grid-columns: auto auto;
-  grid-template-columns: auto auto;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 200px 200px;
   grid-template-rows: 200px 200px;
   grid-gap: 3px;
