prefix for edge

--- a/css/style.css
+++ b/css/style.css
@@ -911,3 +911,36 @@ background-position: -40px -259px;
     padding-left: 5px;
   }
 }
+
+@supports (-ms-ime-align:auto){
+  .css-grid {
+  display: table;
+  }
+  .feed-content{
+    display: table-cell;
+  }
+  .thirdcol-content{
+    display: table-cell;
+    width: 250px;
+  }
+  .photo-post-box{
+    display: table;
+  }
+  .photo-post-box .photo{
+    height: 200px;
+    float: left;
+    width: 50%;
+  }
+  .photo-post-box .vertical{
+    width: 100%;
+  }
+  .thirdcol-content .section-content .pac{
+    display: table;
+  }
+  .thirdcol-content .section-content .pac .pics, .thirdcol-content .section-content .pac .letters{
+    display: table-cell;
+  }
+  .thirdcol-content .section-content .pac .letters{
+    padding-left: 5px;
+  }
+}
