--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ background-position: -40px -259px;
   margin: 5px;
 }
 .thirdcol-content .section-content .fa-angle-right{
-  float: rigth;
+  float: right;
 }
 .thirdcol-content .section-content p:nth-child(3) {
   text-align: right;
