--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ textarea,
   margin-right: 12px;
 }
 .cover-section{
-  padding: 12px 7px;
+  padding: 0 7px;
   overflow: auto;
   margin-left: 220px;
 }
