--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ background-position: -40px -259px;
   border-radius: 50%;
   display: inline-block;
 }
-.feed-content .recentcontainer .comment-contents .comment-box .pic .comment{
+.feed-content .recentcontainer .comment-contents .comment-box .comment{
   display: inline-block;
   vertical-align: top;
   background-color: #eff1f3;
@@ -488,6 +488,22 @@ background-position: -40px -259px;
   padding: 5px;
   font-size: 13px;
   margin-left: 5px;
+  width: 75%;
+  position: relative;
+}
+.feed-content .recentcontainer .comment-contents .comment-box .comment .thumbs-up{
+  position: absolute;
+  background: #fff;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2);
+  border-radius: 10px;
+  right: -35px;
+  padding: 1px 8px 1px 5px;
+  font-size: 11px;
+  bottom: 0;
+}
+.feed-content .recentcontainer .comment-contents .comment-box .comment .thumbs-up .fas{
+  margin-right: 5px;
+  color: #2479ff;
 }
 .thirdcol-content {
   width: 100%;
