--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ textarea,
 }
 .cover-section .cover-img{
   width: 100%;
-  background: url("https://scontent.ficn2-1.fna.fbcdn.net/v/t31.0-8/29060144_10151532524504999_4458768048669235130_o.jpg?_nc_cat=0&oh=4130f7aa082732261574930e99125184&oe=5BAE81E5");
+  background: url("https://scontent-sea1-1.xx.fbcdn.net/v/t31.0-8/29060144_10151532524504999_4458768048669235130_o.jpg?_nc_cat=101&_nc_ht=scontent-sea1-1.xx&oh=3c67cc57c271ef3ccb9cdb53334f911a&oe=5C9BCFE5");
   height: 300px;
   background-size: cover;
 }
