--- a/css/modals.css
+++ b/css/modals.css
@@ -50,15 +50,22 @@
 }
 
 .ad-container .inner{
-    width: 70%;
+    display: flex;
+    flex-flow: row wrap;
+    width: 80%;
     background: #fff;
     border: 1px solid currentColor;
     padding: 20px;
     margin: 0 auto;
 }
-.ad-container #map{
+.ad-container .ad-content{
     width: 100%;
-    height: 400px;
+}
+.ad-container .yes-map{
+    width: 60%;
+}
+.ad-container #map{
+    width: 40%;
 }
 
 .ad-container{
