--- a/css/modals.css
+++ b/css/modals.css
@@ -57,6 +57,30 @@
     border: 1px solid currentColor;
     padding: 20px;
     margin: 0 auto;
+    position: relative;
+}
+.timer{
+    position: absolute;
+    top: -32px;
+    border: 1px solid;
+    left: -1px;
+    background: #fff;
+    padding: 3px 4px;
+}
+.ad-close{
+    display: none;
+    position: absolute;
+    right: -10px;
+    background: black;
+    border-radius: 50%;
+    top: -10px;
+    color: #fff;
+    height: 23px;
+    width: 23px;
+    line-height: 20px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
 }
 .ad-container .ad-content{
     width: 100%;
