--- a/css/huff.scss
+++ b/css/huff.scss
@@ -118,6 +118,7 @@ footer{
     background-color: $purple;
     li{
         width: 100%;
+        cursor: pointer;
     }
     ul{
         display: flex;
