--- a/css/modals.css
+++ b/css/modals.css
@@ -88,9 +88,23 @@
 .ad-container .yes-map{
     width: 60%;
 }
-.ad-container #map{
+.ad-container .map-wrapper{
     width: 40%;
 }
+.ad-container .map-wrapper .map{
+    height: 90%;
+}
+.ad-container .map-wrapper #map{
+    width: 100%;
+    height: 100%;
+}
+.ad-container .map-wrapper .addup{
+    height: 10%;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
 
 .ad-container{
     display: none;
